--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="mybank">
                 <h3><u>MyBank</u></h3>
                 <h4>First slide Enjoy Quality Services At Your Fingertips</h4>
-                <a href="https://facebook.com/yourprofile" target="_blank" rel="noopener noreferrer">View Website</a>
+                <a href="https://oramzybank.netlify.app" target="_blank" rel="noopener noreferrer">View Website</a>
             </div>
         </div>
     </section>
@@ -153,10 +153,10 @@
 
 <footer>
     <ul>
-        <li><a href=""><img src="./img/fb.png" height="30" width="30" alt=""></a></li>
-        <li><a href=""><img src="./img/linkedin.png" height="30" width="30" alt=""></a></li>
-        <li><a href=""><img src="./img/github.png" height="30" width="30" alt=""></a></li>
-        <li><a href=""><img src="./img/gmail.png" height="30" width="30" alt=""></a></li>
+        <li><a href="https://facebook.com/giftoramabo" target="_blank" rel="noopener noreferrer"><img src="./img/fb.png" height="30" width="30" alt=""></a></li>
+        <li><a href="http://www.linkedin.com/in/giftoramabo" target="_blank" rel="noopener noreferrer"><img src="./img/linkedin.png" height="30" width="30" alt=""></a></li>
+        <li><a href="https://github.com/oramzy1" target="_blank" rel="noopener noreferrer"><img src="./img/github.png" height="30" width="30" alt=""></a></li>
+        <li><a href="mailto:giftoramabo@gmail.com" target="_blank" rel="noopener noreferrer"><img src="./img/gmail.png" height="30" width="30" ></a></li>
     </ul>
     <p>2023 Oramabo Gift. All rights reserved.</p>
 </footer>
