--- a/index.html
+++ b/index.html
@@ -114,26 +114,26 @@
         <h1 class="recent">My Recent Projects</h1>
        <div class="first-project">
         <div class="pomopulse">
-            <h3><u>Pomopulse</u></h3>
-            <h4>A productivity timer web app that assists users keep track of their activities.</h4>
-            <a href="https://pomopulse.vercel.app/" target="_blank" rel="noopener noreferrer">View Website</a>
+            <h3><u>Filmstrik</u></h3>
+            <h4>Capturing moments in pixels</h4>
+            <a href="https://www.filmstrik.com/" target="_blank" rel="noopener noreferrer">View Website</a>
         </div>
         <div class="zwilt">
-            <h3><u>Zwilt Bank</u></h3>
-            <h4>Enjoy Secure Banking Across Africa...</h4>
-            <a href="https://zwiltbankapp.vercel.app/" target="_blank" rel="noopener noreferrer">View Website</a>
+            <h3><u>Showstopper</u></h3>
+            <h4>The Sweet Sound of music</h4>
+            <a href="https://store.showstoppermusicng.com/" target="_blank" rel="noopener noreferrer">View Website</a>
         </div>
        </div>
         <div class="second-project">
             <div class="gloryinspires">
+                <h3><u>Pomopulse</u></h3>
+                <h4>A productivity timer web app that assists users keep track of their activities.</h4>
+                <a href="https://pomopulse.vercel.app/" target="_blank" rel="noopener noreferrer">View Website</a>
+            </div>
+            <div class="mybank">
                 <h3><u>Glory Inspires</u></h3>
                 <h4>Tune in to uplifting podcasts, delve into insightful blogs, and join a community rooted in faith.</h4>
                 <a href="https://gloryinspires.vercel.app/" target="_blank" rel="noopener noreferrer">View Website</a>
-            </div>
-            <div class="mybank">
-                <h3><u>MyBank</u></h3>
-                <h4>First slide Enjoy Quality Services At Your Fingertips</h4>
-                <a href="https://oramzybank.netlify.app" target="_blank" rel="noopener noreferrer">View Website</a>
             </div>
         </div>
     </section>
